Add protected vehicle inventory
